[add|mod]提交软盘镜像;补充一些文档

--- a/README
+++ b/README
@@ -1,14 +1,15 @@
-# bb core
+# sOS32
 
-跟着大神做内核
+一个简单的 32 位操作系统 🐍OS，参考了大佬的教程。目前仅能在屏幕上输出信息，并不能进行交互。
+
+使用 GRUB 进行引导，借助了一个安装有 GRUB 的软盘 floppy.img。可以查看 Makefile 中的 update_image 部分
 
 ## startup
 
 ``` shell
-mkdir _kernel
-
+# 编译并安装内核到软盘上
 make
-
+# 目前依赖 qemu 启动，也可以使用 bochs
 make qemu
 ```
 
